# utilpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
SteamMsgGenerator/: CMakeLists.txt
SteamMsgGenerator/src/SteamLanguageParser/: CMakeLists.txt  cmake_install.cmake
SteamMsgGenerator/src/SteamLanguageParser/private/: CPPCodeGenerator.cpp  CPPCodeGenerator.h  SteamLanguageParser.cpp  SteamLanguageParser.h  main.cpp
SteamMsgGenerator/src/SteamLanguageParser/public/: CodeGenerator.h  LanguageParser.h
src/better-enums/: CMakeLists.txt
src/crypto_lib_helper/: CMakeLists.txt
src/crypto_lib_helper/private/: crypto_lib_aes.cpp  crypto_lib_base64.cpp  crypto_lib_md5.cpp  crypto_lib_rsa.cpp  crypto_lib_sha.cpp
src/crypto_lib_helper/public/: crypto_lib_aes.h  crypto_lib_base64.h  crypto_lib_export_defs.h  crypto_lib_md5.h  crypto_lib_rsa.h  crypto_lib_sha.h  crypto_lib_types.h
src/graphic_subsystem/: CMakeLists.txt
src/graphic_subsystem/private/Graphic/: GraphicSubsystem.cpp  GraphicSubsystemDX11.cpp  GraphicSubsystemDX11.h  GraphicSubsystemDX9.cpp  GraphicSubsystemDX9.h  GraphicSubsystemDXGI.cpp  GraphicSubsystemDXGI.h
src/graphic_subsystem/public/: graphic_subsystem_exports.h
src/graphic_subsystem/public/Graphic/: GraphicSubsystem.h  GraphicSubsystemDXGI.h
src/ipc_util/: CMakeLists.txt
src/ipc_util/private/: ChildProcessManager.cpp  ipc_error_internal.h  sm_util.cpp
src/ipc_util/private/RPC/: MessageFactory.cpp  jrpc_command.cpp  jrpc_interface.cpp  message_client.cpp  message_client.h  message_common.cpp  message_internal.h  message_processer.cpp  message_server.cpp  message_server.h  message_session.cpp  message_session.h  rpc_interface.cpp  rpc_processer.cpp
src/ipc_util/private/linux/: mutex_util_posix.cpp  (+1 more)
src/ipc_util/public/: ChildProcessManager.h  event_util.h  ipc_error.h  ipc_util_export.h  mutex_util.h  sm_util.h
src/net_util/: CMakeLists.txt  download-file.capnp
src/net_util/public/: net_export_defs.h
src/rapidjson/: CMakeLists.txt
src/rpc_parser/: CMakeLists.txt
src/rpc_parser/private/: jrpc_parser.cpp  rpc_definition.cpp
src/rpc_parser/public/: JsonRPCError.h  jrpc_parser.h  rpc_definition.h  rpc_parser_common.h
src/sdl_helper/: CMakeLists.txt
src/simple_archive/: CMakeLists.txt
src/simple_archive/private/: simple_archive_write.cpp
src/simple_archive/public/: simple_archive_export_defs.h  simple_archive_write.h
src/simple_hook_helper/: CMakeLists.txt
src/simple_hook_helper/public/: simple_hook_helper_common.h
src/simple_logger/: CMakeLists.txt
src/simple_logger/private/: LoggerHelper.cpp  logger.cpp
src/simple_logger/public/: LoggerHelper.h  logger.h  logger_export_defs.h
src/simple_util/: CMakeLists.txt
src/simple_util/private/: hex.cpp  simple_math.c  simple_os_defs.c  simple_value_storage.c
src/simple_util/public/: endian_helper.h  hex.h  os_default_application.h  os_info_helper.h  os_sock_helper.h  simple_export_defs.h  simple_math.h  simple_os_defs.h  simple_time.h  simple_uuid.h  simple_value_storage.h
src/simple_utilpp/: CMakeLists.txt
src/simple_utilpp/private/: CharBuffer.cpp  FilesystemMonitor.cpp  PathBuf.cpp  RawFile.cpp  SimpleValueStorage.cpp  ThroughCRTWrapper.cpp  TimeRecorder.cpp  char_buffer_extension.cpp  dir_util.cpp  dir_util_internal.h  dynamic_load_library.cpp  ipc_error_internal.h  logger_header.h  module_util.cpp  raw_file.cpp  simple_error.cpp  string_buffer.cpp
src/simple_utilpp/public/: CharBuffer.h  FilesystemMonitor.h  FunctionExitHelper.h  PathBuf.h  RawFile.h  SimpleValueStorage.h  ThroughCRTWrapper.h  TimeRecorder.h  access_control.h  blocking_queue.h  char_buffer_extension.h  defs.h  delegate_macros.h  dir_definition.h  dir_util.h  dir_util_ex.h  dump_helper.h  dynamic_load_library.h  event_util.h  handle.h  module_util.h  mutex_util.h  rate_calc.h  raw_file.h  simple_error.h  simple_error_def.h  simple_export_ppdefs.h  simple_os_info.h  simple_os_process.h  sm_util.h  std_ext.h  string_buffer.h  string_convert.h  thread_pool.h
src/simple_utilpp_header/: CMakeLists.txt
src/simple_utilpp_header/public/: 2fa_def.h  SimpleIPAddress.h  ThroughCRTWrapper.h  architecture_def.h  bit_vector.h  blocking_queue.h  cmake_def.h  constant_hash.h  data_op_define.h  delegate_macros.h  handle.h  named_class_register.h  simple_error.h  simple_error_def.h  simple_exit_code_def.h  singleton.h  std_ext.h  string_category_error.h  string_convert.h  thread_pool.h  uri.h
src/sonkwo_utils/: CMakeLists.txt
src/sonkwo_utils/public/: sonkwo_application_info.h  sonkwo_definition.h  sonkwo_service.h
src/steam_msg/: CMakeLists.txt  SteamDDl.h.in  SteamDDl.sql
src/steam_msg/public/: steam_msg_export_defs.h
src/steam_protobufs/: CMakeLists.txt
src/steam_util/: CMakeLists.txt
src/steam_util/private/: SteamLocalCacheHelper.cpp  SteamTypes.cpp  steam_application_info.cpp  steam_web_api_util.cpp
src/steam_util/public/: SteamClientDefinition.h  SteamID.h  SteamLanguage.h  SteamLanguageInternal.h  SteamLocalCacheHelper.h  SteamTypes.h  steam_application_info.h  steam_util_export_defs.h  steam_web_api_util.h
src/sutils/: CMakeLists.txt
src/sutils/private/: TimeRecorder.cpp  block.cpp  dir_util.cpp  file_node.cpp  file_pool.cpp  file_processer.cpp  handle.cpp  hash.cpp  logger.cpp  map_file.cpp  raw_file.cpp  sha1.c  string_buffer.cpp
src/sutils/public/: TimeRecorder.h  access_control.h  base64.h  block.h  blocking_queue.h  defs.h  delegate_macros.h  dump_helper.h  file_node.h  file_pool.h  file_processer.h  handle.h  hash.h  map_file.h  misc.h  module_util.h  rate_calc.h  raw_file.h  sha1.h  sonkwodump.h  std_ext.h  string_buffer.h  thread_pool.h  uri.h
src/system_info_util/: CMakeLists.txt
src/system_info_util/private/: system_info.cpp  system_info_inner.h
src/system_info_util/public/: system_info.h  system_info_export_defs.h
src/task_manager/: CMakeLists.txt
src/task_manager/public/: task_manager_export_defs.h
src/windows_util/: CMakeLists.txt
src/windows_util/public/: WindowsResourceManager.h  pe_helper.h  service_helper.h  windows_helper.h  windows_util_export_defs.h
(+152 files in other folders)
